--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.1.5",
+    "@babel/runtime": "^7.4.4",
+    "bootstrap": "^4.3.1",
     "meteor-node-stubs": "^0.4.1",
+    "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
+    "react-redux": "^7.0.2",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "simpl-schema": "^1.5.5"
   },
   "meteor": {
     "mainModule": {
@@ -19,5 +29,14 @@
       "server": "server/main.js"
     },
     "testModule": "tests/main.js"
+  },
+  "staticAssets": {
+    "extensions": [
+      "jpg",
+      "png",
+      "svg"
+    ],
+    "pathPrefix": "static/",
+    "exportAbsolutePaths": true
   }
 }
