--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
   "env": {
     "development": {
       "plugins": [
-        ["react-transform", {
+        ["@babel/helper-module-imports","react-transform", {
           "transforms": [{
             "transform": "react-transform-hmr",
             "imports": ["react"],
