--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-quill": "^1.3.3",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
@@ -42,6 +43,7 @@
     "exportAbsolutePaths": true
   },
   "devDependencies": {
+    "@babel/helper-module-imports": "^7.0.0",
     "babel-plugin-import": "^1.11.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-meteor": "^7.4.3",
