--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.4",
+    "@babel/runtime": "^7.4.5",
     "babel-plugin-react-transform": "^3.0.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
+    "meteor-accounts-t9n": "^2.5.1",
     "meteor-node-stubs": "^0.4.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
