--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-react-transform": "^3.0.0",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.3.1",
+    "katex": "^0.10.2",
     "meteor-accounts-t9n": "^2.5.1",
     "meteor-node-stubs": "^0.4.1",
     "normalize.css": "^8.0.1",
